@@ -14,4 +14,4 @@
 
 
 
-java $JAVA_OPTS -jar /app.jar
+java $JAVA_OPTS --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED -jar /app.jar
